--- a/style.css
+++ b/style.css
@@ -30,7 +30,8 @@ thead {
 }
 
 #input-space,
-#rest-all-input {
+#rest-all-input,
+#user-select {
 	margin-left: 20px;
 	display: flex;
 	flex-direction: row;
@@ -183,10 +184,10 @@ body {
 	background-color: #444;
 }
 
-.pagination {
+/* .pagination {
 	display: inline-block;
 	margin-top: 10px;
-	/* margin-bottom: 10px; */
+	margin-bottom: 10px;
 }
 
 .pagination a {
@@ -210,8 +211,7 @@ body {
 .pagination a:hover:not(.active) {
 	background-color: #ddd;
 }
-
-#query-parent {
+*/ #query-parent {
 	display: inline-flex;
 	justify-content: space-between;
 	width: 55%;
